--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ img{
         width: 80vw;
     }
     .imageOfCountry{
-        height: 35vh;
+        width: 80vw;
         border-radius: 10px;
     }
     span.Border-Countries{
